# libtpu-python

./: .gitignore  build.py  jaxtest.py  pyproject.toml  setup.py
libtpu/: __init__.py  libtpujesus.c
